eks/ingress.yaml
# Ingress Class resource to populate the class of our ingress object defined below the triple dash
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx # name of the class of our ingress controller
spec:
  controller: k8s.io/ingress-nginx

--- # triple dash separates two resources in the same .yaml file

# Ingress defines routes to direct traffic to the correct service, allowing us to use one domain name (A record)
# with multiple services 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress # name of the ingress object
spec:
  ingressClassName: nginx # identifies the ingress class defined above which identifies the controller
  rules: # routing rules
    # using the domain name auto-generated by AWS for our Simple Bank API Ingress
    # generally you would use a domain name record you purchased e.g. api.simple-bank.org
  - host: "a15006677829145fa9b0f9fc8a59193e-de29692cbc7bfbc6.elb.us-east-2.amazonaws.com"
    http:
      paths: # specify which HTTP path needs to be directed to the service defined below
      - pathType: Prefix
        path: "/" # we want to accept all requests
        backend:
          service: # which service are we routing the requests to
            name: simple-bank-api-service
            port:
              number: 80 # this is not the target port but the port to listen for requests on
  # additional routes can be defined here with a new host
